# youtubesorter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION.md  INSTALLATION.md  README.md  TODO-and-TODONE.md  TODO.md  TODONE.md  cleanup_recovery.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_hooks.sh
docs/: IMPLEMENTATION.md  USAGE.md  WEBAPI.md
pylint_plugins/: command_checker.py
src/: __init__.py
src/commands/: __init__.py
src/youtubesorter/: __init__.py  api.py  auth.py  cache.py  classifier.py  classify.py  clear_playlist.py  cli.py  common.py  config.py  consolidate.py  core.py  deduplicate.py  distribute.py  errors.py  logging.py  logging_config.py  quota.py  recovery.py  undo.py  utils.py  webapi.py
src/youtubesorter/commands/: __init__.py  base.py  classify.py  deduplicate.py  filter.py  move.py  quota.py
tests/: __init__.py  conftest.py  run_api_tests.py  run_api_tests.sh  test_api.py  test_api_integration.py  test_auth.py  test_base_command.py  test_cache.py  test_classifier.py  test_classify.py  test_classify_command.py  test_clear_playlist.py  test_cli.py  test_commands.py  test_common.py  test_consolidate.py  test_core.py  test_deduplicate.py  test_deduplicate_command.py  test_distribute.py  test_errors.py  test_filter_command.py  test_integration.py  test_logging.py  test_move_command.py  test_performance.py  test_quota.py  test_quota_command.py  test_recovery.py  test_undo.py  test_utils.py  test_webapi.py
