[project]
name = "youtubesorter"
version = "0.1.0"
description = "Filter and move YouTube playlist videos using LLM classification"
requires-python = ">=3.7"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=0.4.0",
    "openai>=1.0.0",
    "tqdm>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtubesorter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
src = ["src"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/data/
'''
